--- a/index.html
+++ b/index.html
@@ -1,2 +1,5 @@
-<title>Website</title>
-<h1>Please Work</h1>
+<!DOCTYPE html>
+<html>
+    <title>Website</title>
+    <h1>Please Work</h1>
+</html>
